// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MessageCard Snapshots should match snapshot for different property types: apartment-property-type 1`] = `
<div
  class="relative bg-white p-4 rounded-md text-sm shadow-md border border-gray-100 text-gray-700"
>
  <div
    class="absolute top-3 right-3 bg-yellow-500 text-white px-2 py-1 text-sm rounded-md"
  >
    New
  </div>
  <h2
    class="mb-4"
  >
    <span
      class="font-bold"
    >
      Property:
    </span>
     
    Luxury Downtown Apartment Complex
  </h2>
  <p>
    I am interested in this property. Please contact me for more information.
  </p>
  <ul
    class="mt-4"
  >
    <li>
      <span
        class="font-bold"
      >
        Reply Email: 
      </span>
      <a
        class="text-blue-500"
        href="mailto:john.doe@example.com"
      >
        john.doe@example.com
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Reply Phone: 
      </span>
      <a
        class="text-blue-500"
        href="tel:+1-555-0123"
      >
        +1-555-0123
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Received: 
      </span>
      1/15/2024, 5:30:00 AM
    </li>
  </ul>
  <div
    data-message-id="message-123"
    data-read="false"
    data-testid="toggle-message-read-button"
  >
    Mark as Read
  </div>
  <div
    data-message-id="message-123"
    data-testid="delete-message-button"
  >
    Delete
  </div>
</div>
`;

exports[`MessageCard Snapshots should match snapshot for house property type: house-property-type 1`] = `
<div
  class="relative bg-white p-4 rounded-md text-sm shadow-md border border-gray-100 text-gray-700"
>
  <div
    class="absolute top-3 right-3 bg-yellow-500 text-white px-2 py-1 text-sm rounded-md"
  >
    New
  </div>
  <h2
    class="mb-4"
  >
    <span
      class="font-bold"
    >
      Property:
    </span>
     
    Spacious Family House with Garden
  </h2>
  <p>
    I am interested in this property. Please contact me for more information.
  </p>
  <ul
    class="mt-4"
  >
    <li>
      <span
        class="font-bold"
      >
        Reply Email: 
      </span>
      <a
        class="text-blue-500"
        href="mailto:john.doe@example.com"
      >
        john.doe@example.com
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Reply Phone: 
      </span>
      <a
        class="text-blue-500"
        href="tel:+1-555-0123"
      >
        +1-555-0123
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Received: 
      </span>
      1/15/2024, 5:30:00 AM
    </li>
  </ul>
  <div
    data-message-id="message-123"
    data-read="false"
    data-testid="toggle-message-read-button"
  >
    Mark as Read
  </div>
  <div
    data-message-id="message-123"
    data-testid="delete-message-button"
  >
    Delete
  </div>
</div>
`;

exports[`MessageCard Snapshots should match snapshot for long message content: long-message-content 1`] = `
<div
  class="relative bg-white p-4 rounded-md text-sm shadow-md border border-gray-100 text-gray-700"
>
  <div
    class="absolute top-3 right-3 bg-yellow-500 text-white px-2 py-1 text-sm rounded-md"
  >
    New
  </div>
  <h2
    class="mb-4"
  >
    <span
      class="font-bold"
    >
      Property:
    </span>
     
    Beautiful Downtown Condo
  </h2>
  <p>
    This is a very long message that contains multiple sentences and should test how the component handles extensive text content. It includes various details about the property inquiry and demonstrates the component's ability to display lengthy communications from potential tenants or property owners. The message continues with more information about specific requirements, preferences, and questions about the property features, amenities, and availability.
  </p>
  <ul
    class="mt-4"
  >
    <li>
      <span
        class="font-bold"
      >
        Reply Email: 
      </span>
      <a
        class="text-blue-500"
        href="mailto:john.doe@example.com"
      >
        john.doe@example.com
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Reply Phone: 
      </span>
      <a
        class="text-blue-500"
        href="tel:+1-555-0123"
      >
        +1-555-0123
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Received: 
      </span>
      1/15/2024, 5:30:00 AM
    </li>
  </ul>
  <div
    data-message-id="message-123"
    data-read="false"
    data-testid="toggle-message-read-button"
  >
    Mark as Read
  </div>
  <div
    data-message-id="message-123"
    data-testid="delete-message-button"
  >
    Delete
  </div>
</div>
`;

exports[`MessageCard Snapshots should match snapshot for read message state: read-message-state 1`] = `
<div
  class="relative bg-white p-4 rounded-md text-sm shadow-md border border-gray-100 text-gray-700"
>
  <h2
    class="mb-4"
  >
    <span
      class="font-bold"
    >
      Property:
    </span>
     
    Beautiful Downtown Condo
  </h2>
  <p>
    I am interested in this property. Please contact me for more information.
  </p>
  <ul
    class="mt-4"
  >
    <li>
      <span
        class="font-bold"
      >
        Reply Email: 
      </span>
      <a
        class="text-blue-500"
        href="mailto:john.doe@example.com"
      >
        john.doe@example.com
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Reply Phone: 
      </span>
      <a
        class="text-blue-500"
        href="tel:+1-555-0123"
      >
        +1-555-0123
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Received: 
      </span>
      1/15/2024, 5:30:00 AM
    </li>
  </ul>
  <div
    data-message-id="message-123"
    data-read="true"
    data-testid="toggle-message-read-button"
  >
    Mark as Unread
  </div>
  <div
    data-message-id="message-123"
    data-testid="delete-message-button"
  >
    Delete
  </div>
</div>
`;

exports[`MessageCard Snapshots should match snapshot for unread message state (with "New" badge): unread-message-with-new-badge 1`] = `
<div
  class="relative bg-white p-4 rounded-md text-sm shadow-md border border-gray-100 text-gray-700"
>
  <div
    class="absolute top-3 right-3 bg-yellow-500 text-white px-2 py-1 text-sm rounded-md"
  >
    New
  </div>
  <h2
    class="mb-4"
  >
    <span
      class="font-bold"
    >
      Property:
    </span>
     
    Beautiful Downtown Condo
  </h2>
  <p>
    I am interested in this property. Please contact me for more information.
  </p>
  <ul
    class="mt-4"
  >
    <li>
      <span
        class="font-bold"
      >
        Reply Email: 
      </span>
      <a
        class="text-blue-500"
        href="mailto:john.doe@example.com"
      >
        john.doe@example.com
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Reply Phone: 
      </span>
      <a
        class="text-blue-500"
        href="tel:+1-555-0123"
      >
        +1-555-0123
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Received: 
      </span>
      1/15/2024, 5:30:00 AM
    </li>
  </ul>
  <div
    data-message-id="message-123"
    data-read="false"
    data-testid="toggle-message-read-button"
  >
    Mark as Read
  </div>
  <div
    data-message-id="message-123"
    data-testid="delete-message-button"
  >
    Delete
  </div>
</div>
`;

exports[`MessageCard Snapshots should match snapshot with all contact information: full-contact-information 1`] = `
<div
  class="relative bg-white p-4 rounded-md text-sm shadow-md border border-gray-100 text-gray-700"
>
  <div
    class="absolute top-3 right-3 bg-yellow-500 text-white px-2 py-1 text-sm rounded-md"
  >
    New
  </div>
  <h2
    class="mb-4"
  >
    <span
      class="font-bold"
    >
      Property:
    </span>
     
    Beautiful Downtown Condo
  </h2>
  <p>
    Complete message with all contact details
  </p>
  <ul
    class="mt-4"
  >
    <li>
      <span
        class="font-bold"
      >
        Reply Email: 
      </span>
      <a
        class="text-blue-500"
        href="mailto:john.doe@example.com"
      >
        john.doe@example.com
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Reply Phone: 
      </span>
      <a
        class="text-blue-500"
        href="tel:555-123-4567"
      >
        555-123-4567
      </a>
    </li>
    <li>
      <span
        class="font-bold"
      >
        Received: 
      </span>
      1/15/2024, 5:30:00 AM
    </li>
  </ul>
  <div
    data-message-id="message-123"
    data-read="false"
    data-testid="toggle-message-read-button"
  >
    Mark as Read
  </div>
  <div
    data-message-id="message-123"
    data-testid="delete-message-button"
  >
    Delete
  </div>
</div>
`;

exports[`MessageCard Snapshots should match snapshot with minimal contact information: minimal-contact-information 1`] = `
<div
  class="relative bg-white p-4 rounded-md text-sm shadow-md border border-gray-100 text-gray-700"
>
  <div
    class="absolute top-3 right-3 bg-yellow-500 text-white px-2 py-1 text-sm rounded-md"
  >
    New
  </div>
  <h2
    class="mb-4"
  >
    <span
      class="font-bold"
    >
      Property:
    </span>
     
    Beautiful Downtown Condo
  </h2>
  <p>
    Message with minimal contact info
  </p>
  <ul
    class="mt-4"
  >
    <li>
      <span
        class="font-bold"
      >
        Reply Email: 
      </span>
      <a
        class="text-blue-500"
        href="mailto:"
      />
    </li>
    <li>
      <span
        class="font-bold"
      >
        Reply Phone: 
      </span>
      <a
        class="text-blue-500"
        href="tel:"
      />
    </li>
    <li>
      <span
        class="font-bold"
      >
        Received: 
      </span>
      1/15/2024, 5:30:00 AM
    </li>
  </ul>
  <div
    data-message-id="message-123"
    data-read="false"
    data-testid="toggle-message-read-button"
  >
    Mark as Read
  </div>
  <div
    data-message-id="message-123"
    data-testid="delete-message-button"
  >
    Delete
  </div>
</div>
`;
